examples/test/testpolicy13997.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13997
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key30: value9
      key44: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value15
          key46: value35
          key19: value13
      podSelector:
        matchLabels:
          key22: value39
          key33: value41
